--- a/tools-abf-webapp/src/app/layout/default/header/header.component.html
+++ b/tools-abf-webapp/src/app/layout/default/header/header.component.html
@@ -13,26 +13,26 @@
             </div>
         </li>
         <!-- Search Button -->
-        <li class="header-search__btn" (click)="searchToggleChange()">
+        <!--<li class="header-search__btn" (click)="searchToggleChange()">
             <div class="item">
                 <i class="anticon anticon-search"></i>
             </div>
-        </li>
+        </li>-->
     </ul>
-    <header-search class="header-search" [toggleChange]="searchToggleStatus"></header-search>
+    <!--<header-search class="header-search" [toggleChange]="searchToggleStatus"></header-search>-->
     <ul class="top-nav">
         <!-- Notify -->
-        <li>
+      <!--  <li>
             <header-notify></header-notify>
         </li>
-        <!-- Task -->
+        &lt;!&ndash; Task &ndash;&gt;
         <li class="hidden-xs">
             <header-task></header-task>
         </li>
-        <!-- App Icons -->
+        &lt;!&ndash; App Icons &ndash;&gt;
         <li class="hidden-xs">
             <header-icon></header-icon>
-        </li>
+        </li>-->
         <!-- Settings -->
         <li class="hidden-xs">
             <nz-dropdown nzTrigger="click" nzPlacement="bottomRight">
