--- a/tools-abf-webapp/src/app/routes/application/function/function.component.html
+++ b/tools-abf-webapp/src/app/routes/application/function/function.component.html
@@ -71,9 +71,19 @@
     </div>
     <div class="ui-g-8">
         <nz-card nzTitle="功能列表" [nzBordered]="false">
-        <app-list #child [initDate]="data" (addCreat)="addHandler($event)" (buttonData)="buttonDataHandler($event)" (pageNumber)="monitorHandler($event)"
-              (deleatData)="deleatData($event)" [configTitle]="configTitle" (isActive)="isActive($event)" (buttonEvent)="buttonEvent($event)" (selectedRow)="selectedRow($event)" [headerDate]="headerData"
-              [moreData]="moreData" [total]="total"></app-list>
+        <app-list #child [initDate]="data"
+                  (addCreat)="addHandler($event)"
+                  (buttonData)="buttonDataHandler($event)"
+                  (pageNumber)="monitorHandler($event)"
+                    (deleatData)="deleatData($event)"
+                  [configTitle]="configTitle"
+                  (isActive)="isActive($event)"
+                  (buttonEvent)="buttonEvent($event)"
+                  (selectedRow)="selectedRow($event)"
+                  [headerDate]="headerData"
+                    [moreData]="moreData"
+                  [total]="total">
+        </app-list>
         </nz-card>
     </div>
 </div>
@@ -87,8 +97,8 @@
                 <div nz-form-item class="d-flex">
                     <div nz-form-label class="alignment" style="margin-top: 7px;margin-right: 10px;"><label for="funcType">功能类型:</label></div>
                     <div nz-form-control class="flex-1">
-                        <nz-select style="width:100%" [(ngModel)]="funcItem.funcType"  disabled=""  name="funcType" [nzSize]="'large'" [nzPlaceHolder]="'功能类型'" nzId="funcType">
-                            <nz-option  *ngFor="let i of funcType;" [nzLabel]="i.value" [nzValue]="i.key"></nz-option>
+                        <nz-select style="width:100%" [(ngModel)]="funcItem.funcType"    name="funcType" [nzSize]="'large'" [nzPlaceHolder]="'功能类型'" nzId="funcType">
+                            <nz-option  *ngFor="let i of funcTypes;" [nzLabel]="i.value" [nzValue]="i.key"></nz-option>
                         </nz-select>
                     </div>
                 </div>
