--- a/tools-abf-webapp/src/app/routes/application/function/function.component.html
+++ b/tools-abf-webapp/src/app/routes/application/function/function.component.html
@@ -97,7 +97,7 @@
                 <div nz-form-item class="d-flex">
                     <div nz-form-label class="alignment" style="margin-top: 7px;margin-right: 10px;"><label for="funcType">功能类型:</label></div>
                     <div nz-form-control class="flex-1">
-                        <nz-select style="width:100%" [(ngModel)]="funcItem.funcType"    name="funcType" [nzSize]="'large'" [nzPlaceHolder]="'功能类型'" nzId="funcType">
+                        <nz-select style="width:100%" [(ngModel)]="funcItem.funcType"  disabled  name="funcType" [nzSize]="'large'" [nzPlaceHolder]="'功能类型'" nzId="funcType">
                             <nz-option  *ngFor="let i of funcTypes;" [nzLabel]="i.value" [nzValue]="i.key"></nz-option>
                         </nz-select>
                     </div>
