--- a/tools-abf-webapp/src/app/component/list/list.component.html
+++ b/tools-abf-webapp/src/app/component/list/list.component.html
@@ -1,14 +1,11 @@
 <!--  列表组件 -->
 <div class="mb-md">
-    <button  *ngIf="!showAdd" nz-button (click)="add()" [nzType]="'primary'" [nzSize]="'large'">
+    <!--<button  *ngIf="!showAdd" nz-button (click)="add()" [nzType]="'primary'" [nzSize]="'large'">
         <i class="anticon anticon-plus"></i>
         <span>新建</span>
-    </button>
+    </button>-->
 
-    <button *ngIf="selectedRows.length >0 && !showAdd" nz-button (click)="remove()" style="margin-left: 10px;" [nzType]="'danger'" [nzSize]="'large'">
-        <i class="anticon anticon-minus"></i>
-        <span>删除</span>
-    </button>
+
 
     <!--必须选中一个的时候，即数组长度大于-的时候，才会显示这一块内容，否则不显示-->
     <ng-container *ngIf="selectedRows.length == 1 && moreData.morebutton && !showAdd">
@@ -25,7 +22,7 @@
 
 </div>
 <!-- 头部标题 -->
-<div class="mb-md">
+<div class="mb-md" *ngIf="showAdd">
     <nz-alert [nzType]="'info'" [nzShowIcon]="true">
         <span alert-body>
             已选择
@@ -44,7 +41,7 @@
           [nzPageIndex]='q.pi'>
     <thead nz-thead>
     <tr>
-        <th nz-th [nzCheckbox]="true">
+        <th nz-th [nzCheckbox]="true" *ngIf="showAdd" >
             <label nz-checkbox [(ngModel)]="allChecked" [nzIndeterminate]="indeterminate" (ngModelChange)="checkAll($event)"></label>
         </th>
         <th *ngFor="let d of headerDate" nz-th>
@@ -58,7 +55,7 @@
     <tbody nz-tbody>
     <!--意思是 data数据要根据表头的顺序来排列？-->
     <tr nz-tbody-tr *ngFor="let i of nzTable.data;let l = index">
-        <td nz-td [nzCheckbox]="true">
+        <td nz-td [nzCheckbox]="true" *ngIf="showAdd">
             <label nz-checkbox [nzDisabled]="i.disabled" [(ngModel)]="i.checked"  (ngModelChange)="refreshStatus($event)">
             </label>
         </td>
@@ -68,6 +65,7 @@
         <td *ngFor="let d of headerDate;let s = index">
             <!-- 利用ngClass 来完成是否可以点击跳转等行为 -->
             <span [ngClass]="{'active': d.isclick, 'noactive': !d.isclick}" class="active" (click)="isClick(d,i)">{{initDate[l][d.key]}}</span>
+            
             <!--还是要写方法，因为不一定是路由跳转还有可能弹出框以及其他的交易，所以写一个方法吧
             <a *ngIf="d.isclick"  [routerLink]="['/APPlication']"  [queryParams]="data[l]">{{data[l][d.key]}}</a>-->
         </td>
