--- a/tools-abf-webapp/src/app/routes/authority/role/data-range/data-range.component.html
+++ b/tools-abf-webapp/src/app/routes/authority/role/data-range/data-range.component.html
@@ -1,1 +1,51 @@
-<p>数据权限界面</p>
+     <div *ngIf="isNull == true">
+   <div  style="margin-bottom: 18px;
+        border-bottom: 1px solid gainsboro;
+        height: 32px;display:flex">
+        <span>角色 [ ROLE4：{{roleGuid}}] 的数据范围</span>
+
+        <!--<nz-input nz-col [nzSpan]="7" [nzOffset]='2' [nzType]="'search'" [nzPlaceHolder]="'输入应用代码／实体代码／表名称／实体名称'" [(ngModel)]="searchValue" style="width: 200px;" (nzOnSearch)="onSearch($event)"></nz-input>-->
+ <div nz-col [nzSpan]="9"  [nzOffset]='8' class="mb-md">
+                <div nz-form-item class="d-flex">
+                   
+                    <div nz-form-control class="flex-1">
+                        <nz-input [nzType]="'search'" [(ngModel)]="searchValue" name="searchValue" [nzSize]="'large'" [nzPlaceHolder]="'输入应用代码／实体代码／表名称／实体名称'" nzId="userId"  (nzOnSearch)="onSearch($event)"></nz-input>
+                    </div>
+                </div>
+            </div>
+</div>
+<div  class="mb-md">
+     <!-- 监听列表组件，如果点击了则告诉弹出框组件，打开弹出框,监听addCreat方法-->
+    <app-list (addCreat)="addHandler($event)"
+              (buttonData)="buttonDataHandler($event)"
+              (pageNumber)="monitorHandler($event)"
+              (deleatData)="deleatData($event)"
+              (isActive)="isActive($event)"
+              (selectedRow)="selectedRow($event)"
+              [initDate] = "data"
+              [headerDate] = "headerData"
+              [showAdd]='showAdd'
+             >
+    </app-list >
+</div>
+   <button  nz-col [nzSpan]="24" nz-button nzType="dashed"><i class="anticon anticon-plus"></i>添加数据范围</button>
+     </div>
+
+
+     <div  *ngIf="isNull == false">
+     <div nz-row [nzType]="'flex'" [nzJustify]="'space-around'" [nzAlign]="'middle'">
+       
+        <div nz-col [nzSpan]="24" style="margin: 5rem 0 14rem;text-align:center">
+              <h3 style="font-weight:bold;margin-bottom: 15px;">当前角色无数据范围限制</h3>
+               <p class="height-50">
+                    <button nz-button [nzType]="'primary'" (click)="addHandler('add')">
+                <i class="anticon anticon-plus"></i>
+                      <span>增加数据范围</span>
+                  </button>
+             </p>
+           
+        </div>
+    
+      </div>
+</div>
+    
