--- a/tools-abf-webapp/src/app/routes/organization/group/group.component.html
+++ b/tools-abf-webapp/src/app/routes/organization/group/group.component.html
@@ -12,7 +12,18 @@
 <div class="ui-g">
     <div class="ui-g-3">
         <p-card  [style]="{width: '100%'}">
-            <app-tree [initDate] = "treedata" (develop)="Unfold($event)" [searchTitle] = "searchTitle"  [itemsData]="treemenus"  (Select)="TreeSelect($event)"   (MenuSelect)="RightSelect($event)"   (dropEvent)="dropEvent($event)" (serchValue)="searchVal($event)"></app-tree>
+            <app-tree
+                [initDate] = "treedata"
+                (develop)="Unfold($event)"
+                [searchTitle] = "searchTitle"
+                [itemsData]="treemenus"
+                (Select)="TreeSelect($event)"
+                (MenuSelect)="RightSelect($event)"
+                (dropEvent)="dropEvent($event)"
+                (serchValue)="searchVal($event)"
+                [selectionType]='selectionType'>
+
+            </app-tree>
         </p-card>
     </div>
     <div class="ui-g-9">
