--- a/tools-abf-webapp/src/app/layout/default/header/header.component.html
+++ b/tools-abf-webapp/src/app/layout/default/header/header.component.html
@@ -43,12 +43,12 @@
                     <div nz-menu-item class="theme-switch">
                         <header-theme></header-theme>
                     </div>
-                    <div nz-menu-item>
+                    <!--<div nz-menu-item>
                         <header-fullscreen></header-fullscreen>
                     </div>
                     <div nz-menu-item>
                         <header-storage></header-storage>
-                    </div>
+                    </div>-->
                     <div nz-menu-item>
                         <header-i18n></header-i18n>
                     </div>
