--- a/tools-abf-webapp/src/app/routes/application/function/function.component.html
+++ b/tools-abf-webapp/src/app/routes/application/function/function.component.html
@@ -38,7 +38,8 @@
                 <div nz-col [nzSpan]="12" class="mb-md">
                     <div nz-form-item class="d-flex" style="font-size: 18px;">
                         <div   class="ad-desc-list__term ng-star-inserted">是否开通:</div>
-                        <div  class="ad-desc-list__detail ng-star-inserted">{{ appItem.isopen == 'YES' &&'开通' || appItem.isopen == 'NO' &&'关闭'}}</div>
+                        <!--<div  class="ad-desc-list__detail ng-star-inserted">{{ appItem.isopen == 'YES' &&'开通' || appItem.isopen == 'NO' &&'关闭'}}</div>-->
+                        <div  class="ad-desc-list__detail ng-star-inserted">{{ appItem.isopen}}</div>
                     </div>
                 </div>
                 <div nz-col [nzSpan]="12" class="mb-md">
@@ -75,15 +76,14 @@
                   (addCreat)="addHandler($event)"
                   (buttonData)="buttonDataHandler($event)"
                   (pageNumber)="monitorHandler($event)"
-                    (deleatData)="deleatData($event)"
+              (deleatData)="deleatData($event)"
                   [configTitle]="configTitle"
                   (isActive)="isActive($event)"
                   (buttonEvent)="buttonEvent($event)"
                   (selectedRow)="selectedRow($event)"
                   [headerDate]="headerData"
                     [moreData]="moreData"
-                  [total]="total">
-        </app-list>
+                  [total]="total"></app-list>
         </nz-card>
     </div>
 </div>
@@ -97,7 +97,7 @@
                 <div nz-form-item class="d-flex">
                     <div nz-form-label class="alignment" style="margin-top: 7px;margin-right: 10px;"><label for="funcType">功能类型:</label></div>
                     <div nz-form-control class="flex-1">
-                        <nz-select style="width:100%" [(ngModel)]="funcItem.funcType"  disabled  name="funcType" [nzSize]="'large'" [nzPlaceHolder]="'功能类型'" nzId="funcType">
+                        <nz-select style="width:100%" [(ngModel)]="funcItem.funcType" disabled name="funcType"  [nzSize]="'large'" [nzPlaceHolder]="'功能类型'" nzId="funcType">
                             <nz-option  *ngFor="let i of funcTypes;" [nzLabel]="i.value" [nzValue]="i.key"></nz-option>
                         </nz-select>
                     </div>
@@ -185,7 +185,7 @@
                     <div nz-form-label class="alignment" style="margin-top: 7px;margin-right: 10px;"><label for="funcType">属性类型:</label></div>
                     <div nz-form-control class="flex-1">
                         <nz-select style="width:100%" [(ngModel)]="activeItem.attrType"  disabled=""  name="attrType" [nzSize]="'large'" [nzPlaceHolder]="'属性类型'" nzId="attrType">
-                            <nz-option  *ngFor="let i of funcType;" [nzLabel]="i.value" [nzValue]="i.key"></nz-option>
+                            <nz-option  *ngFor="let i of funcTypes;" [nzLabel]="i.value" [nzValue]="i.key"></nz-option>
                         </nz-select>
                     </div>
                 </div>
