--- a/tools-abf-webapp/src/app/component/list/list.component.html
+++ b/tools-abf-webapp/src/app/component/list/list.component.html
@@ -45,7 +45,8 @@
             <label nz-checkbox [(ngModel)]="allChecked" [nzIndeterminate]="indeterminate" (ngModelChange)="checkAll($event)"></label>
         </th>
         <th *ngFor="let d of headerDate" nz-th>
-            <span>{{d.value}}</span>
+       
+              <span>{{d.value}}</span>
         </th>
         <th nz-th>
             <span>操作</span>
@@ -64,8 +65,21 @@
         -->
         <td *ngFor="let d of headerDate;let s = index">
             <!-- 利用ngClass 来完成是否可以点击跳转等行为 -->
-            <span [ngClass]="{'active': d.isclick, 'noactive': !d.isclick}" class="active" (click)="isClick(d,i)">{{initDate[l][d.key]}}</span>
-            
+            <span *ngIf='d.key !="viewRange"  && d.key !="manageableRange"  && d.key !="customRange" ' [ngClass]="{'active': d.isclick, 'noactive': !d.isclick}" class="active" (click)="isClick(d,i)">{{initDate[l][d.key]}}</span>
+                 <span *ngIf="d.key == 'viewRange'">
+                     
+                    <nz-checkbox-group [(ngModel)]="i.viewRange" 
+                    style="display:blocks"
+                     (ngModelChange)="_log(checkOptionsThree)"></nz-checkbox-group> 
+                  </span>
+
+                    <span *ngIf="d.key == 'manageableRange'">
+                    <nz-checkbox-group [(ngModel)]="i.manageableRange"  style="display:block" (ngModelChange)="_log(checkOptionsThree)"></nz-checkbox-group>
+                     </span>
+
+                      <span *ngIf="d.key=='customRange'">
+                          <a *ngFor="let k of i.customRange;" style="display:block" href="{{k.url}}">{{k.label}}</a>
+                     </span>
             <!--还是要写方法，因为不一定是路由跳转还有可能弹出框以及其他的交易，所以写一个方法吧
             <a *ngIf="d.isclick"  [routerLink]="['/APPlication']"  [queryParams]="data[l]">{{data[l][d.key]}}</a>-->
         </td>
