--- a/tools-abf-webapp/src/app/routes/authority/role/data-range/data-range.component.html
+++ b/tools-abf-webapp/src/app/routes/authority/role/data-range/data-range.component.html
@@ -28,7 +28,7 @@
              >
     </app-list >
 </div>
-   <button  nz-col [nzSpan]="24" nz-button nzType="dashed"><i class="anticon anticon-plus"></i>添加数据范围</button>
+   <button  nz-col [nzSpan]="24" nz-button nzType="dashed" (click)="addRange()"><i class="anticon anticon-plus"></i>添加数据范围</button>
      </div>
 
 
@@ -38,7 +38,7 @@
         <div nz-col [nzSpan]="24" style="margin: 5rem 0 14rem;text-align:center">
               <h3 style="font-weight:bold;margin-bottom: 15px;">当前角色无数据范围限制</h3>
                <p class="height-50">
-                    <button nz-button [nzType]="'primary'" (click)="addHandler('add')">
+                    <button nz-button [nzType]="'primary'" (click)="addRange()">
                 <i class="anticon anticon-plus"></i>
                       <span>增加数据范围</span>
                   </button>
@@ -48,4 +48,23 @@
     
       </div>
 </div>
+
+    <nz-modal [nzVisible]="dataAddModal" [nzWidth]="1024" [nzTitle]="'新增数据范围'" [nzConfirmLoading]="loading" [nzContent]="roleContent"
+          (nzOnCancel)="dataAddModal=false" (nzOnOk)="subAdddata()">
+    <ng-template #roleContent>
+        <h2 style="text-align:center">选择实体增加数据范围控制</h2>
+              <app-list
+              (pageNumber)="monitorHandler($event)"
+              (deleatData)="deleatData($event)"
+              (isActive)="isActive($event)"
+              (selectedRow)="selectedRowAdd($event)"
+              [initDate] = "dataAdd"
+              [headerDate] = "headerDataAdd"
+              [showAdd]='showAddAdd'
+              [total]='total'
+              >
+                  
+              </app-list>
+       </ng-template>
+</nz-modal>
     
