--- a/tools-abf-webapp/src/app/component/list/list.component.less
+++ b/tools-abf-webapp/src/app/component/list/list.component.less
@@ -6,3 +6,10 @@
 .noactive{
     color:#000;
 }
+.checkbox{
+    display: grid;
+}
+.checkbox > .ant-checkbox-wrapper {
+    margin-left: 0 !important;
+    color: red;
+}
