--- a/tools-abf-webapp/src/app/component/list/list.component.less
+++ b/tools-abf-webapp/src/app/component/list/list.component.less
@@ -9,7 +9,7 @@
 .checkbox{
     display: grid;
 }
-.checkbox > .ant-checkbox-wrapper {
+.checkbox > label :first-child {
     margin-left: 0 !important;
     color: red;
 }
