--- a/tools-senior-webapp/src/app/routes/listManagement/sub-list/sub-list.component.html
+++ b/tools-senior-webapp/src/app/routes/listManagement/sub-list/sub-list.component.html
@@ -22,6 +22,7 @@
                                        (ngModelChange)="checkSelect(workItmseach)"
                                        (nzOpenChange)="openChange()"
                                        [nzSize]="'large'"
+                                       [nzShowSearch]=true
                                        [nzPlaceHolder]="'选择工作项'"
                                        nzId="workItmseach"
                                        [nzNotFoundContent]="'暂无内容'">
