核对样式更改
核对样式更改

--- a/tools-abf-webapp/src/app/component/list/list.component.html
+++ b/tools-abf-webapp/src/app/component/list/list.component.html
@@ -48,7 +48,7 @@
        
               <span>{{d.value}}</span>
         </th>
-        <th nz-th>
+        <th *ngIf='operate == true' nz-th >
             <span>操作</span>
         </th>
     </tr>
