--- a/tools-abf-webapp/src/app/routes/application/application/application.component.html
+++ b/tools-abf-webapp/src/app/routes/application/application/application.component.html
@@ -61,9 +61,19 @@
         </div>
     </form>
     <!--列表组件-->
-    <app-list #child [initDate]="data" (addCreat)="addHandler($event)" (buttonData)="buttonDataHandler($event)" (pageNumber)="monitorHandler($event)"
-              (deleatData)="deleatData($event)" [configTitle]="configTitle" (isActive)="isActive($event)" (buttonEvent)="buttonEvent($event)" (selectedRow)="selectedRow($event)" [headerDate]="headerData"
-              [moreData]="moreData" [total]="total"></app-list>
+    <app-list #child [initDate]="data"
+              (addCreat)="addHandler($event)"
+              (buttonData)="buttonDataHandler($event)"
+              (pageNumber)="monitorHandler($event)"
+              (deleatData)="deleatData($event)"
+              [configTitle]="configTitle"
+              (isActive)="isActive($event)"
+              (buttonEvent)="buttonEvent($event)"
+              (selectedRow)="selectedRow($event)"
+              [headerDate]="headerData"
+              [pageindex]='pageIndex'
+              [moreData]="moreData"
+              [total]="total"></app-list>
 </nz-card>
 
 <!-- 弹出框 -->
