--- a/tools-abf-webapp/src/app/routes/organization/group/group-post/group-post.component.html
+++ b/tools-abf-webapp/src/app/routes/organization/group/group-post/group-post.component.html
@@ -39,7 +39,17 @@
     </div>
 </form>
 <!-- 监听列表组件，如果点击了则告诉弹出框组件，打开弹出框,监听addCreat方法-->
-<app-list (addCreat)="addHandler($event)" [configTitle]="configTitle"  [total]="total"  (buttonData)="buttonDataHandler($event)"  (pageNumber)="monitorHandler($event)"  (deleatData)="deleatData($event)" (selectedRow)="selectedRow($event)"  (isActive)="isActive($event)"  [initDate] = "data" [headerDate] = "headerData"  [moreData] = "moreData"
+<app-list (addCreat)="addHandler($event)"
+          [configTitle]="configTitle"
+          [total]="total"
+          (buttonData)="buttonDataHandler($event)"
+          (pageNumber)="monitorHandler($event)"
+          (selectedRow)="selectedRow($event)"
+          (isActive)="isActive($event)"
+          [initDate] = "data"
+          [headerDate] = "headerData"
+          [moreData] = "moreData"
+          [buttons] = 'buttons'
           (buttonEvent) = "buttonEvent($event)"
 ></app-list>
 <!--引入列表组件-->
