--- a/tools-abf-webapp/src/app/routes/organization/emp/emp.component.html
+++ b/tools-abf-webapp/src/app/routes/organization/emp/emp.component.html
@@ -70,7 +70,18 @@
     </form>
     <!-- 监听列表组件，如果点击了则告诉弹出框组件，打开弹出框,监听addCreat方法-->
     <app-list (addCreat)="addHandler($event)"
-              [total]="total" [configTitle]="configTitle"    (buttonData)="buttonDataHandler($event)"  (buttonEvent) = "buttonEvent($event)" (pageNumber)="monitorHandler($event)"  (deleatData)="deleatData($event)" (selectedRow)="selectedRow($event)"  (isActive)="isActive($event)"  [initDate] = "data" [headerDate] = "headerData"  [moreData] = "moreData"></app-list>
+              [total]="total"
+              [buttons] = 'buttons'
+              [configTitle]="configTitle"
+              (buttonData)="buttonDataHandler($event)"
+              (buttonEvent) = "buttonEvent($event)"
+              (pageNumber)="monitorHandler($event)"
+              (deleatData)="deleatData($event)"
+              (selectedRow)="selectedRow($event)"
+              (isActive)="isActive($event)"
+              [initDate] = "data"
+              [headerDate] = "headerData"
+              [moreData] = "moreData"></app-list>
     <!--引入列表组件-->
 
     <!--新增员工弹出框信息-->
