--- a/tools-abf-webapp/src/app/routes/application/function/function.component.html
+++ b/tools-abf-webapp/src/app/routes/application/function/function.component.html
@@ -78,6 +78,7 @@
                   (pageNumber)="monitorHandler($event)"
               (deleatData)="deleatData($event)"
                   [configTitle]="configTitle"
+                  [pageindex]='pageIndex'
                   (isActive)="isActive($event)"
                   (buttonEvent)="buttonEvent($event)"
                   (selectedRow)="selectedRow($event)"
